syntax = "proto3";

package grpc;

service SecretService {
    rpc PostSecret(Secret) returns (Id) {}
    rpc ReadSecret(Id) returns (Secret) {}
}

message Id {
    string name = 1;
}

message Secret {
    string secret = 1;
}
